<resources>
    <string name="app_name">Foodery Admin</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- Strings related to login -->
    <string name="name_field">Name</string>
    <string name="email_field">Email</string>
    <string name="phone_field">phone</string>
    <string name="password_field">Password</string>

    <string name="login">Login</string>
    <string name="you_are_not_a_member_register">Don\'t have account? <b><u><font fgcolor='#f2cb05'>Register.</font></u></b></string>
    <string name="already_have_account">Already have account? <b><u><font fgcolor='#f2cb05'>Login</font></u></b></string>

    <string name="nice_to_see_you">Nice to see you!</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="full_name">Full Name</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_more">More</string>

    <string name="exit_dialog_message">Are you sure want to exit?</string>
    <string name="exit_dialog_title">Exit?</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="item_image">item image</string>
    <string name="upload_image"><u>Upload Image</u></string>
    <string name="veg">Veg.</string>
    <string name="non_veg">Non Veg.</string>
    <string name="item_name">Item Name</string>
    <string name="select_category">Select Category</string>
    <string name="normal_price">Normal Price</string>
    <string name="offer_price">Offer Price</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="category_image">category image</string>
    <string name="category_name">Category Name</string>
    <string name="add_item">Add Item</string>
    <string name="add_category">Add Category</string>
    <string name="item">Item</string>
    <string name="categories">Categories</string>
    <string name="items">Items</string>

    <string name="currency">Rs.</string>
    <string name="price_string">Rs. %d</string>

    <string name="date_string">Order Date: %s</string>

    <string name="text_no_connectivity">No Connection</string>
    <string name="text_connectivity">Back Online</string>
    <string name="text_post_header">Post Header</string>
    <string name="quantity">Quantity</string>
    <string name="_0">0</string>
    <string name="label_order">Order</string>
    <string name="label_add_to_cart">Add to cart</string>
    <string name="total_price">Total Price:</string>

    <string name="error_min_item">Minimum item must be 1</string>
    <string name="error_max_item">Maximum item must be less than 20</string>
    <string name="_1">1</string>
    <string name="rs_0">Rs. 0</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="location_field">Location</string>
    <string name="order_date">Order Date</string>
    <string name="accept_order">Accept Order</string>
    <string name="order_from">Order From:</string>
    <string name="quantity_string">Quantity: %d</string>
    <string name="order_status_string">Order Status: %s</string>
    <string name="location_string">Location: %s</string>


</resources>