<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_regular"
    android:clickable="true"
    android:elevation="10dp"
    android:focusable="true"
    android:padding="@dimen/padding_regular">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="0dp"
            android:layout_height="194dp"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sample_meal_image" />

        <TextView
            android:id="@+id/normalPriceView"
            style="@style/priceTagTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/price_tag_low_bg"
            android:gravity="center"
            android:paddingStart="@dimen/dimen_16"
            android:paddingTop="@dimen/dimen_8"

            android:paddingEnd="@dimen/dimen_16"
            android:paddingBottom="@dimen/dimen_16"
            android:text="@string/currency"
            app:layout_constraintEnd_toEndOf="@+id/itemImageView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemImageView" />

        <TextView
            android:id="@+id/itemNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/item_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/orderStatusTextView"
            app:layout_constraintTop_toBottomOf="@+id/itemImageView" />

        <TextView
            android:id="@+id/orderStatusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/order_status_string"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/itemNameView"
            app:layout_constraintTop_toTopOf="@id/itemNameView" />


        <TextView
            android:id="@+id/quantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/quantity"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemNameView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


        <View
            android:id="@+id/dividerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantityTextView" />

        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_8"
            android:text="@string/total_price"
            app:layout_constraintEnd_toStartOf="@id/totalPriceValue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerView" />

        <TextView
            android:id="@+id/totalPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_8"
            android:text="@string/rs_0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@+id/totalPriceTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/totalPriceTextView" />

        <TextView
            android:id="@+id/orderBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:padding="@dimen/dimen_8"
            android:text="@string/order_from"
            app:layout_constraintStart_toEndOf="@id/orderDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalPriceTextView"
            />

        <TextView
            android:id="@+id/orderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_8"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/date_string"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toEndOf="@id/orderBy"
            app:layout_constraintTop_toTopOf="@id/orderBy" />

        <TextView
            android:id="@+id/userFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_8"
            android:text="@string/name_field"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orderBy"

            />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:padding="@dimen/dimen_8"
            android:text="@string/email_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userFullName"

            />

        <TextView
            android:id="@+id/userPhoneTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_8"
            android:text="@string/phone_field"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userEmail"

            />

        <TextView
            android:id="@+id/userLocationValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:padding="@dimen/dimen_8"
            android:text="@string/location_string"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userPhoneTextView"

            />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/totalPriceLayoutGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="dividerView,totalPriceTextView, totalPriceValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>