<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_regular"
    android:elevation="10dp"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/padding_regular">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/itemImageView"
            android:layout_width="0dp"
            android:layout_height="194dp"
            android:contentDescription="@string/item_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sample_meal_image" />

        <TextView
            android:id="@+id/itemNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/item_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toTopOf="@id/itemDescriptionView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemImageView" />

        <TextView
            android:id="@+id/itemDescriptionView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAppearance="?attr/textAppearanceBody2"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemNameView" />

        <TextView
            android:id="@+id/normalPriceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/price_background"
            android:gravity="center"
            android:paddingTop="@dimen/dimen_8"
            android:paddingBottom="@dimen/dimen_8"
            android:paddingStart="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_16"

            android:text="@string/normal_price"
            style="@style/priceTagTextView"
            app:layout_constraintEnd_toEndOf="@+id/itemImageView"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/itemImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
